# little_poc

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  aa.js  compile.sh  dot_verify.c  main.c  opcodes.txt  program  start.sh
includes/: callback_params.h  callback_struct.h  controller_params.h  controller_struct.h  custom_logger.h  dot_verify.h  hashmap.h  letSyntax.h  loadfile.h  parser.h  stack_struct.h  struct_callback.h  struct_map.h  syntax.h  tokens_enum.h
src/: dot_verify.c  hashmap.c  loadfile.c  main.c  syntax.c
src/callback/: callback.c
src/controller/: controller.c
src/hashmap/: hashmap.c
src/parser/: parser.c
src/validations/: tokens.c
